@@ -126,6 +126,9 @@ you can use to test the existance of a property.</p>
 <h4><code>patternset</code></h4>
 <p>Patternsets may be nested within one another, adding the nested
 patterns to the parent patternset.</p>
+<h4><code>invert</code></h4>
+<p>A nested patternset can be inverted using the <code>&lt;invert&gt;</code>
+element. <em>Since Ant 1.7.1</em></p>
 <h3>Examples</h3>
 <blockquote><pre>
 &lt;patternset id=&quot;non.test.sources&quot;&gt;
